--- a/munia.X/nbproject/private/SuppressibleMessageMemo.properties
+++ b/munia.X/nbproject/private/SuppressibleMessageMemo.properties
@@ -1,3 +1,5 @@
 #
-#Tue Jun 23 18:34:07 CEST 2015
+#Sun Nov 01 15:47:54 CET 2015
 pk3/CHECK_4_HIGH_VOLTAGE_VPP=true
+mdbDebugger/LAST_HW_BP_RESOURCE_WARN=true
+mdbDebugger/NO_HW_BP_RESOURCES_WARN=true
