--- a/munia.X/nbproject/private/SuppressibleMessageMemo.properties
+++ b/munia.X/nbproject/private/SuppressibleMessageMemo.properties
@@ -1,5 +1,6 @@
 #
-#Sun Nov 01 15:47:54 CET 2015
+#Mon Dec 28 23:26:47 CET 2015
 pk3/CHECK_4_HIGH_VOLTAGE_VPP=true
+pk3/DEVID_MISMATCH=true
 mdbDebugger/LAST_HW_BP_RESOURCE_WARN=true
 mdbDebugger/NO_HW_BP_RESOURCES_WARN=true
