--- a/MUNIA-win/MUNIA/packages.config
+++ b/MUNIA-win/MUNIA/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="OpenTK" version="1.1.2225.0" targetFramework="net45" />
   <package id="OpenTK.GLControl" version="1.1.1589.5942" targetFramework="net45" />
+  <package id="SharpLibHid" version="1.3.1" targetFramework="net45" />
+  <package id="SharpLibWin32" version="0.0.7" targetFramework="net45" />
 </packages>
