add window size picker

--- a/MUNIA-win/MUNIA/MUNIA.csproj
+++ b/MUNIA-win/MUNIA/MUNIA.csproj
@@ -51,6 +51,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
@@ -71,6 +72,12 @@
     <Compile Include="Controllers\SnesController.cs" />
     <Compile Include="SvgController.cs" />
     <Compile Include="UsbNotification.cs" />
+    <Compile Include="WindowSizePicker.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WindowSizePicker.Designer.cs">
+      <DependentUpon>WindowSizePicker.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -84,6 +91,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="WindowSizePicker.resx">
+      <DependentUpon>WindowSizePicker.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="OpenTK.dll.config" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
