--- a/MUNIA-win/MUNIA/MUNIA.csproj
+++ b/MUNIA-win/MUNIA/MUNIA.csproj
@@ -57,6 +57,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AboutBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AboutBox.Designer.cs">
+      <DependentUpon>AboutBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="GLGraphics.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -70,7 +76,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\SnesController.cs" />
+    <Compile Include="SubmitBug.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="SvgController.cs" />
+    <Compile Include="UpdateChecker.cs" />
     <Compile Include="UsbNotification.cs" />
     <Compile Include="WindowSizePicker.cs">
       <SubType>Form</SubType>
@@ -78,6 +88,9 @@
     <Compile Include="WindowSizePicker.Designer.cs">
       <DependentUpon>WindowSizePicker.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="AboutBox.resx">
+      <DependentUpon>AboutBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -91,6 +104,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SubmitBug.resx">
+      <DependentUpon>SubmitBug.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="WindowSizePicker.resx">
       <DependentUpon>WindowSizePicker.cs</DependentUpon>
     </EmbeddedResource>
