--- a/MUNIA-win/MUNIA/packages.config
+++ b/MUNIA-win/MUNIA/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="MSBuildTasks" version="1.4.0.128" targetFramework="net45" />
   <package id="OpenTK" version="1.1.2225.0" targetFramework="net45" />
   <package id="OpenTK.GLControl" version="1.1.1589.5942" targetFramework="net45" />
   <package id="SharpLibHid" version="1.3.1" targetFramework="net45" />
