--- a/MUNIA-win/MUNIA/MUNIA.csproj
+++ b/MUNIA-win/MUNIA/MUNIA.csproj
@@ -70,6 +70,13 @@
     <Compile Include="Controllers\MuniaController.cs" />
     <Compile Include="Controllers\N64Controller.cs" />
     <Compile Include="Controllers\NgcController.cs" />
+    <Compile Include="MuniaSettings.cs" />
+    <Compile Include="MuniaSettingsDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MuniaSettingsDialog.Designer.cs">
+      <DependentUpon>MuniaSettingsDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Option.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -97,6 +104,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MuniaSettingsDialog.resx">
+      <DependentUpon>MuniaSettingsDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
