--- a/MUNIA-win/MUNIA/MUNIA.csproj
+++ b/MUNIA-win/MUNIA/MUNIA.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Controllers\ArduinoController.cs" />
     <Compile Include="Controllers\BufferedController.cs" />
     <Compile Include="Controllers\IController.cs" />
+    <Compile Include="CircularBuffer.cs" />
     <Compile Include="TextureHelper.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
