--- a/MUNIA-win/MUNIA/MUNIA.csproj
+++ b/MUNIA-win/MUNIA/MUNIA.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Forms\DelayValuePicker.Designer.cs">
       <DependentUpon>DelayValuePicker.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\ControllerType.cs" />
     <Compile Include="TextureHelper.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
