--- a/MUNIA-win/MUNIA/MUNIA.csproj
+++ b/MUNIA-win/MUNIA/MUNIA.csproj
@@ -87,7 +87,8 @@
     <Compile Include="Controllers\ArduinoController.cs" />
     <Compile Include="Controllers\BufferedController.cs" />
     <Compile Include="Controllers\IController.cs" />
-    <Compile Include="CircularBuffer.cs" />
+    <Compile Include="Util\ExtensionMethods.cs" />
+    <Compile Include="Util\CircularBuffer.cs" />
     <Compile Include="Forms\DelayValuePicker.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -97,7 +98,10 @@
     <Compile Include="Controllers\ControllerType.cs" />
     <Compile Include="Interop\SerialPortInfo.cs" />
     <Compile Include="Interop\SetupApi.cs" />
-    <Compile Include="TextureHelper.cs" />
+    <Compile Include="Util\IniFile.cs" />
+    <Compile Include="skins\NintendoSpySkin.cs" />
+    <Compile Include="skins\PadpyghtSkin.cs" />
+    <Compile Include="Util\TextureHelper.cs" />
     <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,16 +118,16 @@
     <Compile Include="Forms\MuniaSettingsDialog.Designer.cs">
       <DependentUpon>MuniaSettingsDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="Option.cs" />
+    <Compile Include="Util\Option.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Controllers\MuniaSnes.cs" />
-    <Compile Include="RichTextBoxEx.cs">
+    <Compile Include="Util\RichTextBoxEx.cs">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ConfigManager.cs" />
-    <Compile Include="Skins\Skin.cs" />
-    <Compile Include="Skins\SvgSkin.cs" />
+    <Compile Include="skins\Skin.cs" />
+    <Compile Include="skins\SvgSkin.cs" />
     <Compile Include="Forms\SubmitBug.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -190,14 +194,6 @@
     <None Include="Resources\warn.png" />
   </ItemGroup>
   <ItemGroup />
-  <ItemGroup>
-    <Content Include="Skins\gc.svg" />
-    <Content Include="Skins\n64.svg" />
-    <Content Include="Skins\snes-light-blue.svg" />
-    <Content Include="Skins\snes-light-green.svg" />
-    <Content Include="Skins\snes-light-red.svg" />
-    <Content Include="Skins\snes.svg" />
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
